<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="280sp"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:elevation="20sp"
            app:strokeColor="@color/teal_700"
            app:strokeWidth="1sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_1st_number"
                android:inputType="number"
                android:textSize="20sp" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:elevation="20sp"
            app:strokeColor="@color/teal_700"
            app:strokeWidth="1sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_2nd_number"
                android:inputType="number"
                android:textSize="20sp" />

        </com.google.android.material.card.MaterialCardView>

<!--        <com.google.android.material.card.MaterialCardView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="15dp"-->
<!--            android:layout_marginTop="12dp"-->
<!--            android:layout_marginRight="15dp"-->
<!--            android:elevation="20dp"-->
<!--            app:strokeColor="@color/teal_700"-->
<!--            app:strokeWidth="1dp">-->

<!--            <TextView-->
<!--                android:id="@+id/result"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="40dp"-->
<!--                android:gravity="center"-->
<!--                android:text="@string/result"-->
<!--                android:textSize="20sp" />-->

<!--        </com.google.android.material.card.MaterialCardView>-->


        <RadioGroup
            android:id="@+id/operations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:checkedButton="@+id/plus">

            <RadioButton
                android:id="@+id/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/multiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiply"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/divide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divide"
                android:textSize="20sp" />
        </RadioGroup>
        <Button
            android:id="@+id/get_result"
            android:backgroundTint="@color/teal_700"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_margin="15sp"
            android:text="@string/get_result" />

    </LinearLayout>

</RelativeLayout>